# api/models/User.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"errors"
+	"unicode"
 
 	"github.com/jinzhu/gorm"
 )
@@ -39,6 +40,17 @@ func NewUser(req *UserRequest) *User {
 	}
 }
 
+type ChangePasswordRequest struct {
+	OldPassword     string `json:"old_password"`
+	NewPassword     string `json:"new_password"`
+	ConfrimPassword string `json:"confirm_password"`
+}
+
+type SetPasswordRequest struct {
+	NewPassword     string `json:"new_password"`
+	ConfrimPassword string `json:"confirm_password"`
+}
+
 func (user *User) Prepare() {
 	user.ID = 0
 	user.Active = true
@@ -65,5 +77,89 @@ func (user *User) LoginValidate() error {
 	if user.Password == "" {
 		return errors.New("required password")
 	}
+	return nil
+}
+
+func (req *ChangePasswordRequest) Validate() (string, error) {
+	if req.OldPassword == "" {
+		return "", ErrRequiredOldPassword
+	}
+	if req.OldPassword == req.NewPassword {
+		return "", ErrSamePasswordAsOld
+	}
+	return validateChangePassword(req.NewPassword, req.ConfrimPassword)
+}
+
+func validateChangePassword(newPassword, confrimPassword string) (string, error) {
+	if newPassword == "" {
+		return "", ErrRequiredNewPassword
+	}
+	if confrimPassword == "" {
+		return "", ErrRequiredConfrimPassword
+	}
+	if newPassword != confrimPassword {
+		return "", ErrPasswordMismatch
+	}
+	err := PasswordValidate(newPassword)
+	if err != nil {
+		return "", err
+	}
+	return newPassword, nil
+}
+
+func PasswordValidate(password string) error {
+	// Check password length
+	if len(password) < 8 {
+		return ErrPasswordMinLength
+	}
+
+	// Check for at least one uppercase letter
+	hasUpper := false
+	for _, char := range password {
+		if unicode.IsUpper(char) {
+			hasUpper = true
+			break
+		}
+	}
+	if !hasUpper {
+		return ErrPasswordUpperCaseLetter
+	}
+
+	// Check for at least one lowercase letter
+	hasLower := false
+	for _, char := range password {
+		if unicode.IsLower(char) {
+			hasLower = true
+			break
+		}
+	}
+	if !hasLower {
+		return ErrPasswordLowerCaseLetter
+	}
+
+	// Check for at least one digit
+	hasDigit := false
+	for _, char := range password {
+		if unicode.IsDigit(char) {
+			hasDigit = true
+			break
+		}
+	}
+	if !hasDigit {
+		return ErrPasswordOneDigit
+	}
+
+	// Check for at least one special character
+	hasSpecial := false
+	for _, char := range password {
+		if !unicode.IsLetter(char) && !unicode.IsDigit(char) {
+			hasSpecial = true
+			break
+		}
+	}
+	if !hasSpecial {
+		return ErrPasswordSpecialCharacter
+	}
+
 	return nil
 }
